--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ruoyi",
+  "name": "admin-vue",
   "version": "3.8.7",
   "description": "产品管理系统",
-  "author": "若依",
+  "author": "pearpoe",
   "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
@@ -33,7 +33,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://gitee.com/y_project/RuoYi-Vue.git"
+    "url": "https://github.com/pearpoe/admin-vue.git"
   },
   "dependencies": {
     "@riophae/vue-treeselect": "0.4.0",
